--- a/MltiplasInteligncias/.gitignore
+++ b/MltiplasInteligncias/.gitignore
@@ -1,3 +1,14 @@
+*.iml
+.gradle
+/local.properties
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+
 # Built application files
 *.apk
 *.aar
@@ -83,4 +94,3 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
-MltiplasInteligncias/app/google-services.json
